# russian_laws_assistant

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  docker-compose.yml  pyproject.toml
.dvc/: config
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/conf/: config.yaml
backend/conf/embedding/: default.yaml
backend/conf/generator/: default.yaml
backend/conf/qdrant/: default.yaml
backend/conf/sparse/: default.yaml
backend/russian_laws/: __init__.py  api.py  embeddings.py  generator.py  indexer.py  qdrant_manager.py  sparse_encoder.py  test.py
backend/scripts/: queries_gen.ipynb
conf/: config.yaml
conf/embedding/: default.yaml
conf/generator/: default.yaml
conf/train/: default.yaml
frontend/: .dockerignore  README.md  index.html  nginx.conf  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  QuickActions.tsx  TypingIndicator.tsx  WelcomeHero.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: About.tsx  Contacts.tsx  Index.tsx  Profile.tsx
russian_laws/: __init__.py  api.py  embeddings.py  generator.py  indexer.py  metrics.py  qdrant_manager.py  test.py  train.py
scripts/: download_files.sh  parse_rtf_codes.py  prepare_retriever_dataset.py  queries_gen.ipynb
